edited text in about and home; trying to fix clipping at small screen sizes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,8 @@
 
 /* ABOUT ME PAGE STUFF */
 .profileImg {
-    max-height: 70%;
+    max-height: 100vh;
+    
 }
 
 #bioText {
